gnome-terminal (3.26.2-1) UNRELEASED; urgency=medium

  * New upstream release
  * Bump Build-Depends on libvte-2.91-dev to (>= 0.50.2)
  * Refresh patches

 -- Michael Biebl <biebl@debian.org>  Wed, 01 Nov 2017 19:40:40 +0100

gnome-terminal (3.26.1-2) unstable; urgency=medium

  * Team upload
  * debian/gnome-terminal.wrapper: Improve emulation of xterm -e.
    Run gnome-terminal -- EXECUTABLE [ARGS] instead of deprecated
    gnome-terminal -e QUOTED_STRING or gnome-terminal -x EXECUTABLE [ARGS],
    and emulate xterm's fallback-to-shell behaviour more precisely.
  * d/p/window-Fix-tiled-check.patch: Use non-character-cell-based
    sizing whenever at least one edge is tiled, partially addressing
    a regression with GTK+ >= 3.22.23 (partial fix for: #879566)

 -- Simon McVittie <smcv@debian.org>  Mon, 23 Oct 2017 23:26:48 +0100

gnome-terminal (3.26.1-1) unstable; urgency=medium

  * New upstream translations release (Closes: #877293)
  * Bump Build-Depends on libvte-2.91-dev to (>= 0.50.1) as per configure.ac.
  * Bump Standards-Version to 4.1.1

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 03 Oct 2017 10:57:28 -0400

gnome-terminal (3.26.0-1) unstable; urgency=medium

  * Team upload
  * New upstream stable release
  * debian/control.in:
    - Bump Build-Depends on libvte-2.91-dev to (>= 0.50.0)

 -- Simon McVittie <smcv@debian.org>  Tue, 12 Sep 2017 14:45:06 +0100

gnome-terminal (3.25.92-1) unstable; urgency=medium

  * New upstream release
  * debian/control.in:
    - Bump Build-Depends on libvte-2.91-dev to (>= 0.49.92)

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 08 Sep 2017 17:53:54 -0400

gnome-terminal (3.24.2-1) unstable; urgency=medium

  [ Simon McVittie ]
  * Bump Recommends on a D-Bus session bus up to Depends. gnome-terminal
    has a client/server architecture which relies on D-Bus.
    (Closes: #871618)

  [ Jeremy Bicha ]
  * New upstream release
  * debian/control.in:
    - Bump Build-Depends on libvte-2.91-dev to (>= 0.48.2)